<resources>
    <string name="app_name">GeoQuiz</string>

    <string name="question_australia">Capital of Australia is Canberra</string>
    <string name="question_ocean">The Pacific Ocean is larger than the Atlantic Ocean.</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea and the Indian Ocean.</string>
    <string name="question_africa">The source of the Nile River is in Egypt.</string>
    <string name="question_kazakhstan">Almaty is the capital of Kazakhstan</string>

    <string name="toast_true">Correct</string>
    <string name="toast_false">False</string>

    <string name="button_true">True</string>
    <string name="button_false">False</string>
    <string name="button_next">Next</string>
    <string name="button_previous">Previous</string>
</resources>
